# varianalytics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA_SHAPE_AUDIT.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: launch.json
data/output/: audit_log.csv  audit_log.parquet  dim_account.csv  dim_account.parquet  dim_business_unit.csv  dim_business_unit.parquet  dim_comparison_base.csv  dim_comparison_base.parquet  (+25 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTH_GUIDE.md  CLAUDE_DESIGN_ADDENDUM.md  COMPONENT_INVENTORY.md  DEEP_TEST_ISSUES.md  DEPLOYMENT_GUIDE.md  DOCKER_QA_FINDINGS.md  FILTER_FRAMEWORK_STATUS.md  FPA_Variance_Agent_UI.html  FRONTEND_ISSUES.md  FUNCTIONAL_SPECIFICATION.docx  FUNCTIONAL_SPECIFICATION.md  KNOWLEDGE_GRAPH.md  LIGHT_MODE_AUDIT.md  MARSH_VANTAGE_EXECUTIVE_REVIEW.pptx  MASTER_SPRINT_PLAN.md  NARRATIVE_INTELLIGENCE_FRAMEWORK.md  NEXT_SPRINT_PLAN.md  PRODUCT_SPECIFICATION.md  ROADMAP.md  SPRINT_FILTER_WIRING_FIXALL.md  SPRINT_LLM_MONITORING.md  SPRINT_UI_FIXALL.md  TESTING_FRAMEWORK.md  USER_GUIDE.md  VANTAGE_DESIGN_SPEC.md  Vantage_Architecture_Workflow.html  design-tokens.ts
documents/: CLAUDE.md  FPA_Master_Spec_v1.docx  README.md  synthetic-data-spec.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: docker-compose.dev.yml  docker-compose.yml
scripts/: deploy.sh  generate_synthetic_data.py  run_engine.py  start_dev.sh  start_infra.sh
shared/: __init__.py  requirements.txt  setup.py
tests/: conftest.py  pytest.ini
(+440 files in other folders)
